--- a/Server/package.json
+++ b/Server/package.json
@@ -14,11 +14,13 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mssql": "^10.0.2",
+    "nodemailer": "^6.9.12",
     "socket.io": "^4.7.4",
     "zod": "^3.22.4"
   },
