--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "js-cookie": "^3.0.5",
     "next": "^14.1.3",
     "react": "^18",
     "react-dom": "^18",
