--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,14 @@
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "js-cookie": "^3.0.5",
-    "next": "^14.1.3",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "eslint-config-next": "14.1.4"
   }
 }
