feat: :sparkles: send message the client at server at client

--- a/Server/.env
+++ b/Server/.env
@@ -5,5 +5,5 @@ DB_USER = VISIONWEB
 DB_PASSWORD = 1001470143
 USER_EMAIL = luismidev09@gmail.com
 USER_PASS = kjoc qgzq nanz hnst
-TOKEN_SECRET= 1001470143VISIONWEB@%
+TOKEN_SECRET= 1001470143VISIONWEB@%d
 BASE_URL = http://localhost:3000/
