--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
