--- a/Server/package.json
+++ b/Server/package.json
@@ -23,6 +23,7 @@
     "mssql": "^10.0.2",
     "nodemailer": "^6.9.12",
     "socket.io": "^4.7.4",
+    "socket.io-stream": "^0.9.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
