--- a/Server/.env
+++ b/Server/.env
@@ -2,7 +2,7 @@ PORT = 3001
 DB_SERVER = Lui
 DB_NAME = VISIONWEB
 DB_USER = VISIONWEB
-DB_PASSWORD = 1001470143
+DB_PASSWORD = 1001470143Lui
 USER_EMAIL = luismidev09@gmail.com
 USER_PASS = kjoc qgzq nanz hnst
 TOKEN_SECRET= 1001470143VISIONWEB@%d
