--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.5",
     "next": "^14.1.4",
     "react": "^18",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint-config-next": "14.1.4",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
