feat: :sparkles: 90% call friend

--- a/Server/.env
+++ b/Server/.env
@@ -1,7 +1,7 @@
 PORT = 3001
-DB_SERVER = Lui
+DB_SERVER = LUIS
 DB_NAME = VISIONWEB
-DB_USER = VISIONWEB
+DB_USER = Lui
 DB_PASSWORD = 1001470143Lui
 USER_EMAIL = luismidev09@gmail.com
 USER_PASS = kjoc qgzq nanz hnst
