--- a/Server/package.json
+++ b/Server/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mssql": "^10.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.12",
     "socket.io": "^4.7.4",
     "socket.io-stream": "^0.9.1",
